@@ -14,6 +14,7 @@ Current:
   * Code simplifications.
   * A dockable panel for the debug messages.
   * A more modern theme.
+  * A XDG-compatible config file location
   * Matrices can now be displayed with round and square brackets.
   * Many bug fixes.
   * Reduced the number of autogenerated files and  external dependencies to a minimum.
